[IMP] pms: add model to save log of sending files to institutions

--- a/pms_l10n_es/i18n/pms_l10n_es.pot
+++ b/pms_l10n_es/i18n/pms_l10n_es.pot
@@ -28,7 +28,7 @@ msgstr ""
 #. module: pms_l10n_es
 #: code:addons/pms_l10n_es/wizards/traveller_report.py:0
 #, python-format
-msgid "Check the GC configuration to send the guests info"
+msgid "Check the institution configuration to send the guests info"
 msgstr ""
 
 #. module: pms_l10n_es
